WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146669
REGRESSION: Slider thumb does not render properly (image tests with <input type="range">)
https://bugs.webkit.org/show_bug.cgi?id=146669
Summary
REGRESSION: Slider thumb does not render properly (image tests with <input ty...
alan
Reported
2015-07-06 19:22:34 PDT
SSIA
Attachments
Patch
(3.14 KB, patch)
2015-07-06 19:31 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-07-06 19:23:39 PDT
css3/flexbox/flexitem-stretch-range.html fast/forms/range/input-appearance-range-rtl.html fast/forms/range/range-change-min-max.html
alan
Comment 2
2015-07-06 19:24:03 PDT
rdar://problem/21677831
alan
Comment 3
2015-07-06 19:31:39 PDT
Created
attachment 256270
[details]
Patch
WebKit Commit Bot
Comment 4
2015-07-06 22:05:40 PDT
Comment on
attachment 256270
[details]
Patch Clearing flags on attachment: 256270 Committed
r186399
: <
http://trac.webkit.org/changeset/186399
>
WebKit Commit Bot
Comment 5
2015-07-06 22:05:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug