REGRESSION: Slider thumb does not render properly (image tests with <input type="range">) https://bugs.webkit.org/show_bug.cgi?id=146669 rdar://problem/21677831

Reviewed by Simon Fraser.

Draw NSSliderCell's knob only when slider's thumb paint is requested.

Covered by existing tests.

Source/WebCore:

* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::paintSliderThumb):

LayoutTests:

* platform/mac/TestExpectations: Unskip slider tests.


Canonical link: https://commits.webkit.org/164764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186399 268f45cc-cd09-0410-ab3c-d52691b4dbfc